# vhome-server

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  database_init.sql  deploy  docker-compose.yml  init-vuser-db.sh  init.sh  init.sql  init_debug.sql  package.json  server.js  vhome.service
docs/: main.md
libgrouplist/: Cargo.toml
libgrouplist/src/: lib.rs
libgrouplist/src/records/: vlist.rs
migrations/: 0001_init.sql  0001_vlist_table.sql  0002_vlist_populate.sql  0003_user.sql  0004_vuser_populate.sql  0005_task.sql  0006_task-populate.sql  0007_device.sql
src/: authentication.rs  lib.rs  main.rs  records.rs  roles.rs  router.rs  server.rs  session_utils.rs  state.rs
src/apps/: cli.rs  server.rs
src/database/: device.rs  device_measurements.rs  groups_invitations.rs  mod.rs  pairing_codes.rs  participation.rs  prelude.rs  sea_orm_active_enums.rs  task.rs  task_assign.rs  taskset.rs  thermometer.rs  tokens.rs  user_groups.rs  vgroup.rs  vuser.rs
src/interface/: cli.rs
src/middleware/: mod.rs  requires_authentication.rs  requires_group.rs
src/queries/: device.rs  display.rs  group.rs  mod.rs  task.rs  taskset.rs  thermometer.rs  token.rs  user.rs
src/records/: device.rs  group.rs  task.rs  taskset.rs  thermometer.rs  token.rs  user.rs  vgroup.rs  vlist.rs  vtask.rs  vuser.rs
src/routes/: admin.rs  authenticate.rs  device.rs  greet.rs  mod.rs  vgroup.rs  vlist.rs  vtask.rs
src/routes/device/: add_device.rs  all.rs  delete_device.rs  edit_device.rs  get_devices.rs  get_measurements.rs  get_thermometer.rs  mod.rs
src/routes/display/: get_pairing_code.rs  mod.rs  pair_display.rs  use_pairing_code.rs
src/routes/group/: accept_invitation.rs  add_group.rs  generate_group_invitation.rs  get_groups.rs  leave_group.rs  mod.rs  select_group.rs
src/routes/task/: add_task.rs  delete_task.rs  edit_task.rs  get_task.rs  get_task_assign.rs  get_task_assigns.rs  get_tasks.rs  mod.rs  set_task_assign.rs  set_task_completed.rs
src/routes/taskset/: add_taskset.rs  delete_taskset.rs  edit_taskset.rs  get_all_group_tasksets.rs  get_all_tasksets.rs  get_group_tasksets.rs  get_one_taskset.rs  get_taskset.rs  get_tasksets.rs  mod.rs
src/routes/user/: add_user_picture.rs  create_user.rs  get_group_users.rs  get_user.rs  get_user_picture.rs  login.rs  logout.rs  mod.rs
src/server/: lib.rs  main.rs
src/server/routes/: vlist.rs
src/utilities/: invitation_code.rs  mod.rs  token.rs
(+3 files in other folders)
